Changed layout and structure for programme to show up correctly

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ server: true
 exclude:
   - README.md
   - sample-post
-markdown: rdiscount
-rdiscount:
-  extensions: [smart]
+#markdown: rdiscount
+#rdiscount:
+ # extensions: [smart]
 permalink: pretty
